--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -14,7 +14,7 @@ services:
   django:
     build: .
     command: sh -c "python manage.py migrate
-             && python manage.py runserver"
+             && python manage.py runserver 0.0.0.0:8000"
     env_file: .django.env
     volumes:
       - .:/app
