--- a/.gitignore
+++ b/.gitignore
@@ -1,8 +1,4 @@
 venv
 .idea
-example.db.env
-example.django.env
-.celery.env
-Blog/account/__pycache__
-Blog/blog/__pycache__
-Blog/post/__pycache__
+*.env
+__pycache__/
